tests/harness/errors/169_malformed_jsonl_stream.eu
# Importing a malformed JSONL stream should produce a clear error, not a panic
{ import: ["data=jsonl-stream@testdata/malformed.jsonl"] }
main: data count
